<resources>
    <string name="app_name">Magnifier Camera</string>
    <string name="permission_text">Permission is required to zoom in on the camera!</string>
    <string name="setting">Setting</string>
    <string name="home_title">Welcome to use</string>
    <string name="home_content">WELCOME TO THE MAGNIFYING GLASS</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="policy_text" translatable="false">
Privacy Policy
\n\n
This privacy policy has been compiled to better serve those who are concerned with how their \'Personally Identifiable Information\' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
\n\n
What personal information do we collect from the people that visit our blog, website or app?
\n\n
When ordering or registering on our site, as appropriate, you may be asked to enter your name or other details to help you with your experience.
\n\n
When do we collect information?
\n\n
We collect information from you when you register on our site or enter information on our site.
\n\n
How do we use your information?
\n\n
We may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features in the following ways:
\n\n
* To personalize your experience and to allow us to deliver the type of content and product offerings in which you are most interested.
\n\n
Do we use \'cookies\'?
\n\n
We do not use cookies for tracking purposes
\n\n
You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since the
\n\n
browser is a little different, look at your browser\'s Help Menu to learn the correct way to modify your cookies.
\n\n
If you turn cookies off, some of the features that make your site experience more efficient may not function properly . That makes your site experience more efficient and may not function properly.
\n\n
Third-party disclosure
\n\n
We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.
\n\n
Third-party links
\n\n
Occasionally, at our discretion, we may include or offer third-party products or services on our website. These third-party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.
\n\n
Camera Permission
\n\n
We only use camera as a showing tool. Will not capture anythingn without your permission.
\n\n
Google
\n\n
Google\'s advertising requirements can be summed up by Google\'s Advertising Principles. They are put in place to provide a positive experience for users.
\n\n
We use Google AdSense Advertising on our website.
\n\n
Google, as a third-party vendor, uses cookies to serve ads on our site. Google\'s use of the DART cookie enables it to serve ads to our users based on previous visits to our site and other sites on the Internet. Users may opt-out of the use of the DART cookie by visiting the Google Ad and Content Network privacy policy.
\n\n
We have implemented the following:
\n\n
We, along with third-party vendors such as Google use first-party cookies (such as the Google Analytics cookies) and third-party cookies (such as the DoubleClick cookie) or other third-party identifiers together to compile data regarding user interactions with ad impressions and other ad service functions as they relate to our website.
\n\n
COPPA (Children Online Privacy Protection Act)
\n\n
When it comes to the collection of personal information from children under the age of 13 years old, the Children\'s Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States\' consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children\'s privacy and safety online.
\n\n
We do not specifically market to children under the age of 13 years old.
\n\n
Do we let third-parties, including ad networks or plug-ins collect PII from children under 13?
\n\n
We do not collect your email address
\n\n
Contacting Us
\n\n
If there are any questions regarding this privacy policy, you may contact us using the information below.
\n\n
Magnifier Camera magnifiercamerahelp@gmail.com
    </string>
    <string name="please">Please allow read and write permissions</string>
    <string name="fail_photo">Photo capture failed</string>
    <string name="success_photo">Photo saved in Album</string>
</resources>